# done

./: README.md  index.html  package-lock.json  package.json
docs/superpowers/plans/: 2026-06-16-notes-feature.md
docs/superpowers/specs/: 2026-06-11-focusbar-design.md  2026-06-25-foco-mode-design.md  2026-06-28-clientes-earnings-design.md
src/: main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: Icons.tsx  Kbd.tsx  glyphs.tsx
src/lib/: calendar.test.ts  calendar.ts  clients.test.ts  clients.ts  colors.test.ts  colors.ts  debounce.test.ts  debounce.ts  fireworks.ts  focus.test.ts  focus.ts  game.test.ts  game.ts  groups.test.ts  groups.ts  mentions.test.ts  mentions.ts  notes.test.ts  notes.ts  notesStore.ts  parser.test.ts  parser.ts  store.ts  text.ts  types.ts
src/windows/: Focus.tsx  QuickAdd.tsx
src/windows/main/: CalendarView.tsx  Dashboard.tsx  GroupColorContext.tsx  GroupEditor.tsx  MainApp.tsx  NotesSidebarSection.tsx  NotesView.tsx  ProfileView.tsx  Sidebar.tsx  TaskRow.tsx  Toasts.tsx  achievements.ts  views.tsx
src/windows/main/editor/: LinkMention.ts  MentionMenu.tsx  NoteEditor.tsx  SlashCommands.ts  SlashMenu.tsx  linkMention.test.ts
