[package]
name = "done"
version = "0.1.0"
description = "Done — local-first to-do app with a Raycast-style quick-add bar"
authors = ["samwelltech"]
edition = "2021"

[lib]
name = "done_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-opener = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-fs = { version = "2", features = ["watch"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
